dernière correction contraste et hierarchie titre

--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ p {
 
 .cta-hero {
     margin-top: 20px;
-    color: #FFFFFF!important;
+    color: #1C1C1C!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 24px;
@@ -719,17 +719,13 @@ h2 {
 }
 
 
-h4 {
-    color: #333333!important;
-}
-
 .icons {
     margin-bottom: 14px;
     margin-top: 24px;
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #1C1C1C!important;
 }
 
 .portfolio-thumb {
